--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -146,5 +146,19 @@ tail_includes:
     {% include post-sharing.html %}
 
   </div><!-- .post-tail-bottom -->
-
+  <script src="https://giscus.app/client.js"
+        data-repo="lvXiangwei/lvXiangwei.github.io"
+        data-repo-id="R_kgDOIa3MLg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOIa3MLs4CSg2c"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
 </div><!-- div.post-tail-wrapper -->
